--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header {
     display: block;
     position: absolute;
     left: 30px;
-    top: 60px;
+    top: 90px;
     /* Mantido prefixo para maior compatibilidade, mas o unprefixed é o mais importante */
     -webkit-transform: rotate(-10deg);
     transform: rotate(-10deg);
@@ -24,7 +24,7 @@ header {
     margin: 0 auto;
 }
 
-h1, h2 {
+h1, h2, h3 {
     margin: 0;
     padding: 0;
     color: black;
@@ -42,19 +42,17 @@ h2 {
     letter-spacing: -1.3px;
     text-transform: lowercase;
 }
-
+h3 {
+    font-size: 22px;
+    letter-spacing: -1.3px;
+    text-transform: lowercase;
+}
 #subhead {
     display: block;
     width: 50%;
     margin: 0 auto;
 }
 
-p {
-    font-size: 30px;
-    font-family: 'Loved by the King', cursive;
-    color: #8c8c8c;
-    line-height: 38px;
-}
 
 a {
     color: #333333;
