--- a/prova.css
+++ b/prova.css
@@ -28,7 +28,7 @@ header {
 /* Estilo da caixa de nota */
 .grade-box {
     position: absolute;
-    top: 0;
+    top: -20px;
     right: 0;
     width: 2.5cm;
     height: 2cm;
@@ -65,3 +65,17 @@ header hr {
     margin-left: 60px;
     
 }
+
+.aluno {
+    font-size: .8em;
+    text-align:left ;
+    margin-top:-2px;
+    
+}
+.second {
+    border: none;
+    border-top: 1px solid #000;
+    width: 50%;
+    margin-top:-2px;
+    margin-left: 60px;
+    }
